Fixed docker compose stack Nginx and Traefik configuration. Fixed/Removed replacing the Approov attester URL in the Dockerfile.'
Signed-off-by: Exadra37 <exadra37@gmail.com>

--- a/nginx/nginx-behind-traefik.conf
+++ b/nginx/nginx-behind-traefik.conf
@@ -45,36 +45,6 @@ http {
     add_header  Permissions-Policy "vibrate=(); usermedia=(); sync-xhr=(); accelerometer=(); camera=(); geolocation=(); gyroscope=(); magnetometer=(); microphone=(); payment 'none'; usb=()";
     add_header  Content-Security-Policy "default-src 'none'; manifest-src 'self'; base-uri 'self'; frame-ancestors 'none'; form-action 'none'; font-src https://cdnjs.cloudflare.com; img-src 'self'; connect-src https://shapes.approov.io/ https://web-1.approovr.io/ https://api.sjpf.io/ https://api.fpjs.io/; script-src 'self' https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs-pro@3/dist/fp.min.js; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/ https://unpkg.com/tailwindcss@%5E2/dist/;";
 
-    server {
-        listen           8000 default_server;
-        listen           [::]:8000 default_server;
-
-        # sed -i -E "/^[ ]*server_name/s/^.*___SERVERS_NAME___.*$/server_name ${NGINX_SERVERS_NAME};/" /app/nginx/nginx.conf
-        server_name      ___SERVERS_NAME___;
-
-        root             /usr/share/nginx/html;
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-            access_log off;
-        }
-
-        location ~ /.well-known/acme-challenge/ {
-      		allow all;
-		    root /usr/share/nginx/html/.well-known/acme-challenge/;
-        }
-
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
-
-    # include /etc/nginx/conf.d/*.conf;
+    include ./conf.d/*.conf;
 }
 
