--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,20 @@
 # DOCKER COMPOSE SPECIFIC
 ############################
 
-DOCKER_IMAGE=nginx:alpine
+DOCKER_IMAGE=approov/web-quickstart-fingerprintjs-js
 
-SERVER_HOSTNAME=localhost
-SERVER_HTTP_PORT=80
 
-PUBLIC_DOMAIN=exadra37.com
+############################
+# TRAEFIK SPECIFIC
+############################
+
+PUBLIC_DOMAIN=your.domain.com
 PUBLIC_DOMAIN_PORT=443
 
+
+############################
+# WEB APP SPECIFIC
+############################
+
 APPROOV_SITE_KEY=___APPROOV_SITE_KEY_HERE___
-APPROOV_ATTESTER_URL=___APPROOV_ATTESTER_URL_HERE___
 FINGERPRINTJS_BROWSER_TOKEN=___FINGERPRINTJS_BROWSER_TOKEN_HERE___
