--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2.3"
 
 services:
 
+  # Service for localhost development
   local:
     build:
       context: .
@@ -11,12 +12,14 @@ services:
     image: ${DOCKER_IMAGE? Missing env var for DOCKER_IMAGE}
     volumes:
       - ./nginx/nginx-behind-traefik.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d/local.conf:/etc/nginx/conf.d/default.conf
       - ./shapes-app:/usr/share/nginx/html
     ports:
-      - 8000:8000
+      - 8000:8000 # needs to match the port in nginx/conf.d/local.conf
     networks:
       - default
 
+  # Service to develop in an online server behind Traefik
   dev:
     build:
       context: .
@@ -26,18 +29,20 @@ services:
     image: ${DOCKER_IMAGE? Missing env var for DOCKER_IMAGE}
     volumes:
       - ./nginx/nginx-behind-traefik.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d/dev.conf:/etc/nginx/conf.d/default.conf
       - ./shapes-app:/usr/share/nginx/html
     networks:
       - traefik
       - default
     labels:
       - "traefik.enable=true"
-      - "traefik.backend=${SERVER_HOSTNAME? Missing env var SERVER_HOSTNAME}"
+      - "traefik.backend=${PUBLIC_DOMAIN? Missing env var PUBLIC_DOMAIN}"
       - "traefik.docker.network=traefik"
-      - "traefik.port=${SERVER_HTTP_PORT}"
+      - "traefik.port=80" # needs to match the port in nginx/conf.d/dev.conf
       - "traefik.frontend.rule=Host:${PUBLIC_DOMAIN}"
 
-  app:
+  # Service to run the Quickstart as a production demo
+  prod:
     build:
       context: .
       args:
@@ -50,9 +55,9 @@ services:
       - default
     labels:
       - "traefik.enable=true"
-      - "traefik.backend=${SERVER_HOSTNAME? Missing env var SERVER_HOSTNAME}"
+      - "traefik.backend=${PUBLIC_DOMAIN? Missing env var PUBLIC_DOMAIN}"
       - "traefik.docker.network=traefik"
-      - "traefik.port=${SERVER_HTTP_PORT}"
+      - "traefik.port=80" # needs to match the port in nginx/conf.d/prod.conf
       - "traefik.frontend.rule=Host:${PUBLIC_DOMAIN}"
 
 networks:
