Update for DPoP flow. Use shapes.approov.io API key.

--- a/shapes-app/manifest.json
+++ b/shapes-app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Approov FingerprintJS Qucikstart",
-  "short_name": "Approov FingerprintJS",
+  "name": "Approov Fingerprint Quickstart",
+  "short_name": "Approov Fingerprint",
   "theme_color": "#fff",
   "background_color": "#fff",
   "display": "standalone",
