--- a/nginx/nginx-behind-traefik.conf
+++ b/nginx/nginx-behind-traefik.conf
@@ -43,8 +43,7 @@ http {
     add_header  X-XSS-Protection "1; mode=block";
     add_header  Referrer-Policy strict-origin;
     add_header  Permissions-Policy "vibrate=(); usermedia=(); sync-xhr=(); accelerometer=(); camera=(); geolocation=(); gyroscope=(); magnetometer=(); microphone=(); payment 'none'; usb=()";
-    add_header  Content-Security-Policy "default-src 'none'; manifest-src 'self'; base-uri 'self'; frame-ancestors 'none'; form-action 'none'; font-src https://cdnjs.cloudflare.com; img-src 'self'; connect-src https://shapes.approov.io/ https://web-1.approovr.io/ https://api.sjpf.io/ https://api.fpjs.io/; script-src 'self' https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs-pro@3/dist/fp.min.js; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/ https://unpkg.com/tailwindcss@%5E2/dist/;";
+    add_header  Content-Security-Policy "default-src 'none'; manifest-src 'self'; base-uri 'self'; frame-ancestors 'none'; form-action 'none'; font-src https://cdnjs.cloudflare.com; img-src 'self'; connect-src https://shapes.approov.io/ https://web-1.approovr.io/ https://api.sjpf.io/ https://api.fpjs.io/ https://use1.fptls.com/ https://use1.fptls2.com/; script-src 'self' https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs-pro@3/dist/fp.min.js https://fpnpmcdn.net/ https://fpjscdn.net/; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/ https://unpkg.com/tailwindcss@%5E2/dist/;";
 
     include ./conf.d/*.conf;
 }
-
